--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
                 <a class="ms-5 text-dark" asp-area="" asp-controller="Home" asp-action="Panel">Panel</a>
             </div>
             <div class="social">
-                <p class="text-dark">Follow</p>
+                <span class="text-dark">Follow</span>
                 <a href="#" class="fa fa-facebook" title="Facebook"></a>	
                 <a href="#" class="fa fa-twitter" title="Twitter"></a>	
                 <a  href="#" class="fa fa-instagram" title="Instagram"></a>	            
