--- a/wwwroot/css/main.css
+++ b/wwwroot/css/main.css
@@ -21,10 +21,11 @@ nav a{
 }
 
 nav .seccion{
-    display: flex;
+    display: block;
     justify-content: right;
     width: 100%;
     padding-top: 10px;
+    text-align: right;
 }
 
 nav .seccion a{
@@ -120,11 +121,8 @@ nav .seccion a{
 }
 
 .social{
-    display: flex;
-    width: 100%;
-    justify-content: right;
-    text-align: left;
-    padding-right: 80px;
+    position: absolute; 
+    right: 130px;
 }
 
 .social a{
